--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- View Slot Availability HERE -->
-    
+
     <!-- Navigation Bar -->
     <h1>HOME</h1>
     <nav>
@@ -16,5 +16,7 @@
         <a href="profile.html">Profile</a>
         <a href="register_login.html">Register/Login</a>
     </nav>
+
+    <h1>VIEW SLOT AVAILABILITY IS HERE</h1>
 </body>
 </html>
