--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" media="all" href="css/styles.css">
     <title>Main Page</title>
 </head>
 <body>
     <!-- View Slot Availability HERE -->
 
     <!-- Navigation Bar -->
-    <h1>HOME</h1>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="reservation.html">Reserve</a>
-        <a href="profile.html">Profile</a>
-        <a href="register_login.html">Register/Login</a>
-    </nav>
+    <div class="header">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="reservation.html">See Reservation</a>
+            <a href="profile.html">Profile</a>
+            <span class="registerlogin"><a href="register_login.html">Register/Login</a></span>
+        </nav>
+    </div>
 
     <h1>VIEW SLOT AVAILABILITY IS HERE</h1>
 </body>
