Updated Home CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" media="all" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <title>Main Page</title>
 </head>
 <body>
@@ -11,14 +16,19 @@
 
     <!-- Navigation Bar -->
     <div class="header">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="reservation.html">See Reservation</a>
-            <a href="profile.html">Profile</a>
-            <span class="registerlogin"><a href="register_login.html">Register/Login</a></span>
+        <nav class="navbar">
+            <a href="index.html">HOME</a>
+            <a href="reservation.html">SEE RESERVATION</a>
+            <a href="profile.html">PROFILE</a>
+            <span class="registerlogin"><a href="register_login.html">REGISTER/LOGIN</a></span>
         </nav>
+
+        <h1>NBA STADIUM RESERVATION</h1>
+        <h4>Reserve your seats now to witness your favorite NBA basketball action live!</h4>
     </div>
 
+    <div class="content">
     <h1>VIEW SLOT AVAILABILITY IS HERE</h1>
+    </div>
 </body>
 </html>
