changes the classes

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!-- View Slot Availability HERE -->
 
     <!-- Navigation Bar -->
-    <div class="header">
-        <nav class="navbar">
+    <div class="main-page-header ">
+        <nav class="main-page-navbar">
             <a href="index.html">HOME</a>
             <a href="reservation.html">SEE RESERVATION</a>
             <a href="profile.html">PROFILE</a>
@@ -27,7 +27,7 @@
         <h4>Reserve your seats now to witness your favorite NBA basketball action live!</h4>
     </div>
 
-    <div class="content">
+    <div class="main-page-content">
     <h1>VIEW SLOT AVAILABILITY IS HERE</h1>
     </div>
 </body>
