update links in main-page

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <a href="index.html">HOME</a>
             <a href="see_reservation_page.html">SEE RESERVATION</a>
             <a href="reserve_seat_page.html">RESERVE A SEAT</a>
-            <a href="profile.html">PROFILE</a>
-            <span class="main-page-registerlogin"><a href="register_login.html">REGISTER/LOGIN</a></span>
+            <a href="profile_page.html">PROFILE</a>
+            <span class="main-page-registerlogin"><a href="register_page.html">REGISTER/LOGIN</a></span>
         </nav>
 
         <h1>NBA STADIUM RESERVATION</h1>
