--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="main-page-navbar">
             <a href="index.html">HOME</a>
             <a href="reservation.html">SEE RESERVATION</a>
-            <a href="profile.html">PROFILE</a>
+            <a href="profile_page.html">PROFILE</a>
             <span class="registerlogin"><a href="register_login.html">REGISTER/LOGIN</a></span>
         </nav>
 
