--- a/profile_current_reservation_page.html
+++ b/profile_current_reservation_page.html
@@ -32,13 +32,13 @@
                 <p>@rhenzbhovie</p>
             </div>
             <div class="personal-info">
-                <a href="index.html">
+                <a href="profile_page.html">
                     <img src="images/user.png" alt="Your Account">
                     <h4>Your Account</h4>
                 </a>
             </div>
             <div class="personal-reservations">
-                <a href="index.html">
+                <a href="profile_current_reservation_page.html">
                     <img src="images/booking.png" alt="Current Reservations">
                     <h4>Current Reservation/s</h4>
                 </a>
