--- a/profile_page.html
+++ b/profile_page.html
@@ -17,8 +17,8 @@
     <div class="profile-page-header ">
         <nav class="profile-page-navbar">
             <a href="index.html">HOME</a>
-            <a href="reservation.html">SEE RESERVATION</a>
-            <a href="profile.html">PROFILE</a>
+            <a href="see_reservation_page.html">SEE RESERVATION</a>
+            <a href="profile_page.html">PROFILE</a>
             <span class="profile-page-registerlogin"><a href="register_login.html">REGISTER/LOGIN</a></span>
         </nav>
 
@@ -32,13 +32,13 @@
                 <p>@rhenzbhovie</p>
             </div>
             <div class="personal-info">
-                <a href="index.html">
+                <a href="profile_page.html">
                     <img src="images/user.png" alt="Your Account">
                     <h4>Your Account</h4>
                 </a>
             </div>
             <div class="personal-reservations">
-                <a href="index.html">
+                <a href="profile_current_reservation_page.html">
                     <img src="images/booking.png" alt="Current Reservations">
                     <h4>Current Reservation/s</h4>
                 </a>
