--- a/profile_current_reservation_page.html
+++ b/profile_current_reservation_page.html
@@ -18,6 +18,7 @@
         <nav class="profile-page-navbar">
             <a href="index.html">HOME</a>
             <a href="reservation.html">SEE RESERVATION</a>
+            <a href="reserve_seat_page.html">RESERVE A SEAT</a>
             <a href="profile.html">PROFILE</a>
             <span class="profile-page-registerlogin"><a href="register_login.html">REGISTER/LOGIN</a></span>
         </nav>
