Update Main Page
added 2 more sample data

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <span class="main-page-registerlogin"><a href="register_page.html">REGISTER/LOGIN</a></span>
         </nav>
 
-        <h1>NBA STADIUM RESERVATION</h1>
+        <h1>NBA SEAT RESERVATION</h1>
         <h4>Reserve your seats now to witness your favorite NBA basketball action live!</h4>
     </div>
 
@@ -72,6 +72,44 @@
                 <img src ="images/crypto.com-arena.jpeg" alt="Crypto.com Arena" class="main-page-stadiumimage">
                 <div class="main-page-stadiuminfo">
                     <h2>Crypto.com Arena</h2>
+                    <div class="main-page-stadiumdetails">
+                        <img src ="images/main-page-user.png" alt="user" class="main-page-userimage">
+                        <h4>Available Seats: 15</h4>
+                    </div>
+                </div>
+                <div class="main-page-actions">
+                    <a href="view_available_page.html" class="main-view-available">View Availability</a>
+                    <a href="reserve_seat_page.html" class="main-reserve-seat">Reserve Seat</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="main-page-content">
+        <div class="main-page-stadiumcontainer">
+            <div class="main-page-stadiumcontent">
+                <img src ="images/chase-center.jpg" alt="Chase Center" class="main-page-stadiumimage">
+                <div class="main-page-stadiuminfo">
+                    <h2>Chase Center</h2>
+                    <div class="main-page-stadiumdetails">
+                        <img src ="images/main-page-user.png" alt="user" class="main-page-userimage">
+                        <h4>Available Seats: 15</h4>
+                    </div>
+                </div>
+                <div class="main-page-actions">
+                    <a href="view_available_page.html" class="main-view-available">View Availability</a>
+                    <a href="reserve_seat_page.html" class="main-reserve-seat">Reserve Seat</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="main-page-content">
+        <div class="main-page-stadiumcontainer">
+            <div class="main-page-stadiumcontent">
+                <img src ="images/wells-fargo-center.jpg" alt="Wells Fargo Center" class="main-page-stadiumimage">
+                <div class="main-page-stadiuminfo">
+                    <h2>Wells Fargo Center</h2>
                     <div class="main-page-stadiumdetails">
                         <img src ="images/main-page-user.png" alt="user" class="main-page-userimage">
                         <h4>Available Seats: 15</h4>
