Update Main Page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <span class="main-page-registerlogin"><a href="register_page.html">REGISTER/LOGIN</a></span>
         </nav>
 
-        <h1>NBA SEAT RESERVATION</h1>
+        <h1>NBA STADIUM RESERVATION</h1>
         <h4>Reserve your seats now to witness your favorite NBA basketball action live!</h4>
     </div>
 
