--- a/profile_current_reservation_page.html
+++ b/profile_current_reservation_page.html
@@ -91,5 +91,17 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <a href="https://www.nba.com/?17">
+            <img src="images/nba-logo.png" alt="NBA Logo" >
+        </a>
+        <h5>© 2024 NBA All rights reserved.</h5>
+        <nav class="footer-navbar">
+            <a href="https://www.nba.com/news/about">About</a>
+            <a href="https://contact.nba.com/">Contact</a>
+            <a href="https://www.nba.com/teams">Teams</a>
+            <a href="https://www.nba.com/news">Latest News</a>
+        </nav>
+    </div>
 </body>
 </html>
