--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="see_reservation_page.html">SEE RESERVATION</a>
             <a href="reserve_seat_page.html">RESERVE A SEAT</a>
             <a href="profile_page.html">PROFILE</a>
-            <span class="main-page-registerlogin"><a href="register_page.html">REGISTER/LOGIN</a></span>
+            <span class="profile-page-registerlogin"><a href="login_page.html">REGISTER/LOGIN</a></span>
         </nav>
 
         <h1>NBA STADIUM RESERVATION</h1>
