--- a/modify_reservation_page.html
+++ b/modify_reservation_page.html
@@ -17,10 +17,10 @@
     <div class="profile-page-header ">
         <nav class="profile-page-navbar">
             <a href="index.html">HOME</a>
-            <a href="reservation.html">SEE RESERVATION</a>
+            <a href="see_reservation_page.html">SEE RESERVATION</a>
             <a href="reserve_seat_page.html">RESERVE A SEAT</a>
-            <a href="profile.html">PROFILE</a>
-            <span class="profile-page-registerlogin"><a href="register_login.html">REGISTER/LOGIN</a></span>
+            <a href="profile_page.html">PROFILE</a>
+            <span class="profile-page-registerlogin"><a href="login_page.html">REGISTER/LOGIN</a></span>
         </nav>
     </div>
 
@@ -62,7 +62,7 @@
             </div>
             <div class="buttons-content">
                 <div class="left-cancel">
-                    <a href="modify_reservation_page.html"><h2>Cancel</h2></a>
+                    <a href="profile_current_reservation_page.html"><h2>Cancel</h2></a>
                 </div>
                 <div class="right-update">
                     <a href="modify_reservation_page.html"><h2>Update</h2></a>
