--- a/profile_current_reservation_page.html
+++ b/profile_current_reservation_page.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
+    <script src="search-profile.js"></script>
     <title>Profile Page</title>
 </head>
 <body>
@@ -17,10 +17,10 @@
     <div class="profile-page-header ">
         <nav class="profile-page-navbar">
             <a href="index.html">HOME</a>
-            <a href="reservation.html">SEE RESERVATION</a>
+            <a href="see_reservation_page.html">SEE RESERVATION</a>
             <a href="reserve_seat_page.html">RESERVE A SEAT</a>
-            <a href="profile.html">PROFILE</a>
-            <span class="profile-page-registerlogin"><a href="register_login.html">REGISTER/LOGIN</a></span>
+            <a href="profile_page.html">PROFILE</a>
+            <span class="profile-page-registerlogin"><a href="login_page.html">REGISTER/LOGIN</a></span>
         </nav>
 
         <h1>Information</h1>
@@ -81,7 +81,7 @@
                     <h2>Crypto.com Arena</h2>
                 </div>
                 <div class="reservation-buttons">
-                    <a href="" class="modify-reservation">
+                    <a href="modify_reservation_page.html" class="modify-reservation">
                         <h4>Modify Reservation</h4>
                     </a>
                     <a href="" class="cancel-reservation">
