--- a/profile_page.html
+++ b/profile_page.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
+    <script src="search-profile.js"></script>
     <title>Profile Page</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
             <a href="see_reservation_page.html">SEE RESERVATION</a>
             <a href="reserve_seat_page.html">RESERVE A SEAT</a>
             <a href="profile_page.html">PROFILE</a>
-            <span class="profile-page-registerlogin"><a href="register_login.html">REGISTER/LOGIN</a></span>
+            <span class="profile-page-registerlogin"><a href="login_page.html">REGISTER/LOGIN</a></span>
         </nav>
 
         <h1>Information</h1>
