stuck at html content

--- a/view_available_page.html
+++ b/view_available_page.html
@@ -21,14 +21,19 @@
             <a href="profile_page.html">PROFILE</a>
             <span class="profile-page-registerlogin"><a href="login_page.html">REGISTER/LOGIN</a></span>
         </nav>
+        <h1>Stadium: Stadium Name</h1>
+        
     </div>
 
     <div class="view-available-body">
         <!-- Your content goes here -->
+        Date & Time: 
     </div>
     
     <div class="footer">
-        <a href="https://www.nba.com/?17"></a>
+        <a href="https://www.nba.com/?17">
+            <img src="images/nba-logo.png" alt="NBA Logo" >
+        </a>
         <h5>© 2024 NBA All rights reserved.</h5>
         <nav class="footer-navbar">
             <a href="https://www.nba.com/news/about">About</a>
