datetime containers added

--- a/view_available_page.html
+++ b/view_available_page.html
@@ -27,7 +27,14 @@
 
     <div class="view-available-body">
         <!-- Your content goes here -->
+        <div class = "datetimecontainer"> 
         Date & Time: 
+        </div>
+
+        <div class = "datetimediv">
+        TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST 
+        TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST 
+        </div>
     </div>
     
     <div class="footer">
