--- a/remove_reservation.html
+++ b/remove_reservation.html
@@ -27,7 +27,6 @@
     </div>
 
     <div class="container-custom">
-
         <table id="reservation-table">
             <thead>
                 <tr>
@@ -35,7 +34,8 @@
                     <th>Seat Number</th>
                     <th>Arena</th>
                     <th>Date of Request</th>
-                    <th>Date of Reservation</th>
+                    <th>Starting Date & Time</th>
+                    <th>Ending Date & Time</th>
                     <th>Status</th>
                     <th>Edit Reservation</th>
                     <th>Remove Reservation</th>
