username of dashboard

--- a/remove_reservation.html
+++ b/remove_reservation.html
@@ -31,6 +31,7 @@
             <thead>
                 <tr>
                     <th>Reservation ID</th>
+                    <th>Username</th>
                     <th>Seat Number</th>
                     <th>Arena</th>
                     <th>Date of Request</th>
