--- a/reserve_seat_page.html
+++ b/reserve_seat_page.html
@@ -26,39 +26,63 @@
         <h4>Reserve your seats now to witness your favorite NBA basketball action live!</h4>
     </div>
     <div class="reserve-container">
-        <h2>Select Starting Date & Time:</h2>
-        <input type="date" id="start-date" name="start-date">
-        <select id="start-time" name="start-time">
-            <option value="12:00 PM">12:00 PM</option>
-            <option value="1:00 PM">1:00 PM</option>
-            <option value="2:00 PM">2:00 PM</option>
-            <option value="3:00 PM">3:00 PM</option>
-            <option value="4:00 PM">4:00 PM</option>
-            <option value="5:00 PM">5:00 PM</option>
-            <option value="6:00 PM">6:00 PM</option>
-            <option value="7:00 PM">7:00 PM</option>
-            <option value="8:00 PM">8:00 PM</option>
-            <option value="9:00 PM">9:00 PM</option>
-        </select>
+        
+        <div class="new-date-time-container">
+            <div class="new-date-input-container">
+                <label class="new-date-label" for="start-date">Start Date: </label>
+                <div class="date-input-wrapper">
+                    <input type="text" id="start-date" class="date-input" data-placeholder="Select start date">
+                    <i class="fas fa-calendar-alt calendar-icon" onclick="document.getElementById('start-date').focus();"></i>
+                </div>
+            </div>
+            <div class="new-dropdown-container">
+                <label for="start-time">Time:</label>
+                <select id="start-time" name="start-time">
+                    <option value="" disabled selected>Select Time</option>
+                    <option value="12:00 PM">12:00 PM</option>
+                    <option value="1:00 PM">1:00 PM</option>
+                    <option value="2:00 PM">2:00 PM</option>
+                    <option value="3:00 PM">3:00 PM</option>
+                    <option value="4:00 PM">4:00 PM</option>
+                    <option value="5:00 PM">5:00 PM</option>
+                    <option value="6:00 PM">6:00 PM</option>
+                    <option value="7:00 PM">7:00 PM</option>
+                    <option value="8:00 PM">8:00 PM</option>
+                    <option value="9:00 PM">9:00 PM</option>
+                </select>
+            </div>
+        </div>
 
-        <h2>Select Ending Date & Time:</h2>
-        <input type="date" id="end-date" name="end-date">
-        <select id="end-time" name="end-time">
-            <option value="12:00 PM">12:00 PM</option>
-            <option value="1:00 PM">1:00 PM</option>
-            <option value="2:00 PM">2:00 PM</option>
-            <option value="3:00 PM">3:00 PM</option>
-            <option value="4:00 PM">4:00 PM</option>
-            <option value="5:00 PM">5:00 PM</option>
-            <option value="6:00 PM">6:00 PM</option>
-            <option value="7:00 PM">7:00 PM</option>
-            <option value="8:00 PM">8:00 PM</option>
-            <option value="9:00 PM">9:00 PM</option>
-        </select>
+        <div class="new-date-time-container">
+            <div class="new-date-input-container">
+                <label class="new-date-label" for="end-date">End Date: </label>
+                <div class="date-input-wrapper">
+                    <input type="text" id="end-date" class="date-input" data-placeholder="Select end date">
+                    <i class="fas fa-calendar-alt calendar-icon" onclick="document.getElementById('end-date').focus();"></i>
+                </div>
+            </div>
+            <div class="new-dropdown-container">
+                <label for="end-time">Time:</label>
+                <select id="end-time" name="end-time">
+                    <option value="" disabled selected>Select Time</option>
+                    <option value="12:00 PM">12:00 PM</option>
+                    <option value="1:00 PM">1:00 PM</option>
+                    <option value="2:00 PM">2:00 PM</option>
+                    <option value="3:00 PM">3:00 PM</option>
+                    <option value="4:00 PM">4:00 PM</option>
+                    <option value="5:00 PM">5:00 PM</option>
+                    <option value="6:00 PM">6:00 PM</option>
+                    <option value="7:00 PM">7:00 PM</option>
+                    <option value="8:00 PM">8:00 PM</option>
+                    <option value="9:00 PM">9:00 PM</option>
+                </select>
+            </div>
+        </div>
 
         <div class="reserve-legends">
             <div class="reserve-legend"><span class="reserve-available"></span> Available</div>
             <div class="reserve-legend"><span class="reserve-reserved"></span> Reserved</div>
+            <div class="reserve-legend"><span class="reserve-selected"></span> Reserved</div>
         </div>
         <div class="reserve-seat-chart">
             <div class="reserve-left-column">
@@ -91,6 +115,8 @@
                 <button class="reserve-seat" id="B3" onclick="handleSeatClick(this)">B3</button>
             </div>
         </div>
+
+        <button class="reserve-reserve-button" id="reserveButton" onclick="finalizeReservation()" disabled>Reserve</button>
     </div>
     <div class="reserve-footer">
         <a href="https://www.nba.com/?17">
@@ -105,29 +131,82 @@
         </nav>
     </div>
     <script>
+        let selectedSeats = [];
+
         function handleSeatClick(seat) {
             const startDate = document.getElementById('start-date').value;
             const startTime = document.getElementById('start-time').value;
             const endDate = document.getElementById('end-date').value;
             const endTime = document.getElementById('end-time').value;
+
             if (!startDate || !endDate) {
                 alert('Please pick both start and end dates first');
                 return;
             }
+
             if (seat.classList.contains('reserve-reserved')) {
                 alert('Seat is reserved');
-            } else {
-                const seatNumber = seat.innerText;
-                localStorage.setItem('selectedStartDate', startDate);
-                localStorage.setItem('selectedStartTime', startTime);
-                localStorage.setItem('selectedEndDate', endDate);
-                localStorage.setItem('selectedEndTime', endTime);
-                localStorage.setItem('selectedSeat', seatNumber);
-                alert('You have successfully reserved seat ' + seatNumber + ' from ' + startDate + ' ' + startTime + ' to ' + endDate + ' ' + endTime);
+                return;
             }
+
+            if (seat.classList.contains('reserve-selected')) {
+                seat.classList.remove('reserve-selected');
+                selectedSeats = selectedSeats.filter(selectedSeat => selectedSeat !== seat.id);
+            } else {
+                seat.classList.add('reserve-selected');
+                selectedSeats.push(seat.id);
+            }
+
+            document.getElementById('reserveButton').disabled = selectedSeats.length === 0;
+        }
+
+        function finalizeReservation() {
+            const startDate = document.getElementById('start-date').value;
+            const startTime = document.getElementById('start-time').value;
+            const endDate = document.getElementById('end-date').value;
+            const endTime = document.getElementById('end-time').value;
+
+            if (!startDate || !startTime || !endDate || !endTime) {
+                alert('Please fill out all date and time fields.');
+                return;
+            }
+
+            selectedSeats.forEach(seatNumber => {
+                localStorage.setItem(`reservation_${seatNumber}_startDate`, startDate);
+                localStorage.setItem(`reservation_${seatNumber}_startTime`, startTime);
+                localStorage.setItem(`reservation_${seatNumber}_endDate`, endDate);
+                localStorage.setItem(`reservation_${seatNumber}_endTime`, endTime);
+            });
+
+            alert(`You have successfully reserved seats: ${selectedSeats.join(', ')} from ${startDate} ${startTime} to ${endDate} ${endTime}`);
+
+            // Optionally, reset the selected seats and disable the reserve button
+            selectedSeats.forEach(seatNumber => {
+                document.getElementById(seatNumber).classList.remove('reserve-selected');
+            });
+            selectedSeats = [];
+            document.getElementById('reserveButton').disabled = true;
         }
 
         document.addEventListener('DOMContentLoaded', function() {
+            const dateInputs = document.querySelectorAll('.date-input');
+            dateInputs.forEach(input => {
+                input.addEventListener('focus', () => {
+                    input.type = 'date';
+                    input.showPicker(); // Show calendar picker
+                });
+                input.addEventListener('blur', () => {
+                    if (!input.value) {
+                        input.type = 'text';
+                        input.placeholder = input.getAttribute('data-placeholder');
+                    }
+                });
+                if (!input.value) {
+                    input.type = 'text';
+                    input.placeholder = input.getAttribute('data-placeholder');
+                }
+            });
+
             const selectedArena = localStorage.getItem('selectedArena');
             const backgroundImage = localStorage.getItem('backgroundImage');
             const seatAvailability = {
