--- a/view_available_page.html
+++ b/view_available_page.html
@@ -60,7 +60,7 @@
     <div class="view-available-body">
         <div class="view-available-container">
             <div class="view-available-date-container">
-                <label for="start-date">Select Starting Date:</label>
+                <label for="start-date">Select Starting Date and Time:</label>
                 <div class="view-available-date-time-input">
                     <input type="date" id="start-date" name="start-date">
                     <input type="time" id="start-time" name="start-time">
@@ -69,7 +69,7 @@
             <i class="fas fa-calendar-alt calendar-icon" onclick="document.getElementById('start-date').focus();"></i>
 
             <div class="view-available-date-container">
-                <label for="end-date">Select Ending Date:</label>
+                <label for="end-date">Select Ending Date and Time:</label>
                 <div class="view-available-date-time-input">
                     <input type="date" id="end-date" name="end-date">
                     <input type="time" id="end-time" name="end-time">
