--- a/profile_page.html
+++ b/profile_page.html
@@ -20,6 +20,7 @@
             <a href="see_reservation_page.html">SEE RESERVATION</a>
             <a href="reserve_seat_page.html">RESERVE A SEAT</a>
             <a href="profile_page.html">PROFILE</a>
+            <a href="remove_reservation.html">RESERVATION DASHBOARD</a>
             <span class="profile-page-registerlogin"><a href="login_page.html">REGISTER/LOGIN</a></span>
         </nav>
 
