--- a/reserve_seat_page.html
+++ b/reserve_seat_page.html
@@ -117,12 +117,12 @@
 
         <button class="reserve-reserve-button" id="reserveButton" onclick="finalizeReservation()" disabled>Reserve</button>
     </div>
-    <div class="reserve-footer">
+    <div class="footer">
         <a href="https://www.nba.com/?17">
-            <img src="images/nba-logo.png" alt="NBA Logo">
+            <img src="images/nba-logo.png" alt="NBA Logo" >
         </a>
         <h5>© 2024 NBA All rights reserved.</h5>
-        <nav class="reserve-footer-navbar">
+        <nav class="footer-navbar">
             <a href="https://www.nba.com/news/about">About</a>
             <a href="https://contact.nba.com/">Contact</a>
             <a href="https://www.nba.com/teams">Teams</a>
