--- a/reserve_seat_page.html
+++ b/reserve_seat_page.html
@@ -16,7 +16,7 @@
         <nav class="reserve-page-navbar">
             <a href="index.html">HOME</a>
             <a href="see_reservation_page.html">SEE RESERVATION</a>
-            <a href="reserve_seat_page.html">RESERVE A SEAT</a>
+            <a href="index.html?scrollToContent=true">RESERVE A SEAT</a>
             <a href="profile_page.html">PROFILE</a>
             <a href="remove_reservation.html">RESERVATION DASHBOARD</a>
             <span class="reserve-page-registerlogin"><a href="register_page.html">REGISTER/LOGIN</a></span>
