--- a/view_available_page.html
+++ b/view_available_page.html
@@ -50,7 +50,7 @@
         <nav class="profile-page-navbar">
             <a href="index.html">HOME</a>
             <a href="see_reservation_page.html">SEE RESERVATION</a>
-            <a href="reserve_seat_page.html">RESERVE A SEAT</a>
+            <a href="index.html?scrollToContent=true">RESERVE A SEAT</a>
             <a href="profile_page.html">PROFILE</a>
             <a href="remove_reservation.html">RESERVATION DASHBOARD</a>
             <span class="profile-page-registerlogin"><a href="login_page.html">REGISTER/LOGIN</a></span>
@@ -60,23 +60,57 @@
 
     <div class="view-available-body">
         <div class="view-available-container">
-            <div class="view-available-date-container">
-                <label for="start-date">Select Starting Date and Time:</label>
-                <div class="view-available-date-time-input">
-                    <input type="date" id="start-date" name="start-date">
-                    <input type="time" id="start-time" name="start-time">
+            <div class="new-date-time-container">
+                <div class="new-date-input-container">
+                    <label class="new-date-label" for="start-date">Start Date: </label>
+                    <div class="date-input-wrapper">
+                        <input type="date" id="start-date" class="date-input" data-placeholder="Select start date">
+                        <i class="fas fa-calendar-alt calendar-icon" onclick="document.getElementById('start-date').focus();"></i>
+                    </div>
+                </div>
+                <div class="new-dropdown-container">
+                    <label for="start-time">Time:</label>
+                    <select id="start-time" name="start-time">
+                        <option value="" disabled selected>Select Time</option>
+                        <option value="12:00 PM">12:00 PM</option>
+                        <option value="1:00 PM">1:00 PM</option>
+                        <option value="2:00 PM">2:00 PM</option>
+                        <option value="3:00 PM">3:00 PM</option>
+                        <option value="4:00 PM">4:00 PM</option>
+                        <option value="5:00 PM">5:00 PM</option>
+                        <option value="6:00 PM">6:00 PM</option>
+                        <option value="7:00 PM">7:00 PM</option>
+                        <option value="8:00 PM">8:00 PM</option>
+                        <option value="9:00 PM">9:00 PM</option>
+                    </select>
                 </div>
             </div>
-            <i class="fas fa-calendar-alt calendar-icon" onclick="document.getElementById('start-date').focus();"></i>
-
-            <div class="view-available-date-container">
-                <label for="end-date">Select Ending Date and Time:</label>
-                <div class="view-available-date-time-input">
-                    <input type="date" id="end-date" name="end-date">
-                    <input type="time" id="end-time" name="end-time">
+    
+            <div class="new-date-time-container">
+                <div class="new-date-input-container">
+                    <label class="new-date-label" for="end-date">End Date: </label>
+                    <div class="date-input-wrapper">
+                        <input type="date" id="end-date" class="date-input" data-placeholder="Select end date">
+                        <i class="fas fa-calendar-alt calendar-icon" onclick="document.getElementById('end-date').focus();"></i>
+                    </div>
+                </div>
+                <div class="new-dropdown-container">
+                    <label for="end-time">Time:</label>
+                    <select id="end-time" name="end-time">
+                        <option value="" disabled selected>Select Time</option>
+                        <option value="12:00 PM">12:00 PM</option>
+                        <option value="1:00 PM">1:00 PM</option>
+                        <option value="2:00 PM">2:00 PM</option>
+                        <option value="3:00 PM">3:00 PM</option>
+                        <option value="4:00 PM">4:00 PM</option>
+                        <option value="5:00 PM">5:00 PM</option>
+                        <option value="6:00 PM">6:00 PM</option>
+                        <option value="7:00 PM">7:00 PM</option>
+                        <option value="8:00 PM">8:00 PM</option>
+                        <option value="9:00 PM">9:00 PM</option>
+                    </select>
                 </div>
             </div>
-            <i class="fas fa-calendar-alt calendar-icon" onclick="document.getElementById('end-date').focus();"></i>
     
             <div class="view-available-legends">
                 <div class="view-available-legend"><span class="view-available-available"></span> Available</div>
