--- a/remove_reservation.html
+++ b/remove_reservation.html
@@ -17,7 +17,7 @@
         <nav class="remove-reservation-page-navbar">
             <a href="index.html">HOME</a>
             <a href="see_reservation_page.html">SEE RESERVATION</a>
-            <a href="index.html?scrollToContent=true">RESERVE A SEAT</a>
+            <a href="index.html#main-page-content">RESERVE A SEAT</a>
             <a href="profile_page.html">PROFILE</a>
             <a href="remove_reservation.html">RESERVATION DASHBOARD</a>
             <span class="remove-reservation-page-registerlogin"><a href="login_page.html">REGISTER/LOGIN</a></span>
@@ -35,8 +35,7 @@
                     <th>Seat Number</th>
                     <th>Arena</th>
                     <th>Date of Request</th>
-                    <th>Starting Date & Time</th>
-                    <th>Ending Date & Time</th>
+                    <th>Date & Time</th>
                     <th>Status</th>
                     <th>Edit Reservation</th>
                     <th>Remove Reservation</th>
