--- a/reserve_seat_page.html
+++ b/reserve_seat_page.html
@@ -16,7 +16,7 @@
         <nav class="reserve-page-navbar">
             <a href="index.html">HOME</a>
             <a href="see_reservation_page.html">SEE RESERVATION</a>
-            <a href="index.html?scrollToContent=true">RESERVE A SEAT</a>
+            <a href="index.html#main-page-content">RESERVE A SEAT</a>
             <a href="profile_page.html">PROFILE</a>
             <a href="remove_reservation.html">RESERVATION DASHBOARD</a>
             <span class="reserve-page-registerlogin"><a href="register_page.html">REGISTER/LOGIN</a></span>
@@ -29,52 +29,40 @@
         
         <div class="new-date-time-container">
             <div class="new-date-input-container">
-                <label class="new-date-label" for="start-date">Start Date: </label>
+                <label class="new-date-label" for="reservation-date">Date: </label>
                 <div class="date-input-wrapper">
-                    <input type="text" id="start-date" class="date-input" data-placeholder="Select start date">
-                    <i class="fas fa-calendar-alt calendar-icon" onclick="document.getElementById('start-date').focus();"></i>
+                    <input type="text" id="reservation-date" class="date-input" data-placeholder="Select date">
+                    <i class="fas fa-calendar-alt calendar-icon" onclick="document.getElementById('reservation-date').focus();"></i>
                 </div>
             </div>
             <div class="new-dropdown-container">
-                <label for="start-time">Time:</label>
-                <select id="start-time" name="start-time">
+                <label for="reservation-time">Time:</label>
+                <select id="reservation-time" name="reservation-time">
                     <option value="" disabled selected>Select Time</option>
-                    <option value="12:00 PM">12:00 PM</option>
-                    <option value="1:00 PM">1:00 PM</option>
-                    <option value="2:00 PM">2:00 PM</option>
-                    <option value="3:00 PM">3:00 PM</option>
-                    <option value="4:00 PM">4:00 PM</option>
-                    <option value="5:00 PM">5:00 PM</option>
-                    <option value="6:00 PM">6:00 PM</option>
-                    <option value="7:00 PM">7:00 PM</option>
-                    <option value="8:00 PM">8:00 PM</option>
-                    <option value="9:00 PM">9:00 PM</option>
-                </select>
-            </div>
-        </div>
-
-        <div class="new-date-time-container">
-            <div class="new-date-input-container">
-                <label class="new-date-label" for="end-date">End Date: </label>
-                <div class="date-input-wrapper">
-                    <input type="text" id="end-date" class="date-input" data-placeholder="Select end date">
-                    <i class="fas fa-calendar-alt calendar-icon" onclick="document.getElementById('end-date').focus();"></i>
-                </div>
-            </div>
-            <div class="new-dropdown-container">
-                <label for="end-time">Time:</label>
-                <select id="end-time" name="end-time">
-                    <option value="" disabled selected>Select Time</option>
-                    <option value="12:00 PM">12:00 PM</option>
-                    <option value="1:00 PM">1:00 PM</option>
-                    <option value="2:00 PM">2:00 PM</option>
-                    <option value="3:00 PM">3:00 PM</option>
-                    <option value="4:00 PM">4:00 PM</option>
-                    <option value="5:00 PM">5:00 PM</option>
-                    <option value="6:00 PM">6:00 PM</option>
-                    <option value="7:00 PM">7:00 PM</option>
-                    <option value="8:00 PM">8:00 PM</option>
-                    <option value="9:00 PM">9:00 PM</option>
+                    <option value="12:00 AM">12:00 AM - 12:30 AM</option>
+                    <option value="12:30 AM">12:30 AM - 1:00 AM</option>
+                    <option value="1:00 AM">1:00 AM - 1:30 AM</option>
+                    <option value="1:30 AM">1:30 AM - 2:00 AM</option>
+                    <option value="2:00 AM">2:00 AM - 2:30 AM</option>
+                    <option value="2:30 AM">2:30 AM - 3:00 AM</option>
+                    <option value="3:00 AM">3:00 AM - 3:30 AM</option>
+                    <option value="3:30 AM">3:30 AM - 4:00 AM</option>
+                    <option value="4:00 AM">4:00 AM - 4:30 AM</option>
+                    <option value="4:30 AM">4:30 AM - 5:00 AM</option>
+                    <option value="5:00 AM">5:00 AM - 5:30 AM</option>
+                    <option value="5:30 AM">5:30 AM - 6:00 AM</option>
+                    <option value="6:00 AM">6:00 AM - 6:30 AM</option>
+                    <option value="6:30 AM">6:30 AM - 7:00 AM</option>
+                    <option value="7:00 AM">7:00 AM - 7:30 AM</option>
+                    <option value="7:30 AM">7:30 AM - 8:00 AM</option>
+                    <option value="8:00 AM">8:00 AM - 8:30 AM</option>
+                    <option value="8:30 AM">8:30 AM - 9:00 AM</option>
+                    <option value="9:00 AM">9:00 AM - 9:30 AM</option>
+                    <option value="9:30 AM">9:30 AM - 10:00 AM</option>
+                    <option value="10:00 AM">10:00 AM - 10:30 AM</option>
+                    <option value="10:30 AM">10:30 AM - 11:00 AM</option>
+                    <option value="11:00 AM">11:00 AM - 11:30 AM</option>
+                    <option value="11:30 AM">11:30 AM - 12:00 PM</option>
                 </select>
             </div>
         </div>
@@ -119,7 +107,7 @@
     </div>
     <div class="footer">
         <a href="https://www.nba.com/?17">
-            <img src="images/nba-logo.png" alt="NBA Logo" >
+            <img src="images/nba-logo.png" alt="NBA Logo">
         </a>
         <h5>© 2024 NBA All rights reserved.</h5>
         <nav class="footer-navbar">
@@ -133,13 +121,11 @@
         let selectedSeats = [];
 
         function handleSeatClick(seat) {
-            const startDate = document.getElementById('start-date').value;
-            const startTime = document.getElementById('start-time').value;
-            const endDate = document.getElementById('end-date').value;
-            const endTime = document.getElementById('end-time').value;
+            const reservationDate = document.getElementById('reservation-date').value;
+            const reservationTime = document.getElementById('reservation-time').value;
 
-            if (!startDate || !endDate) {
-                alert('Please pick both start and end dates first');
+            if (!reservationDate || !reservationTime) {
+                alert('Please pick both date and time first');
                 return;
             }
 
@@ -160,24 +146,20 @@
         }
 
         function finalizeReservation() {
-            const startDate = document.getElementById('start-date').value;
-            const startTime = document.getElementById('start-time').value;
-            const endDate = document.getElementById('end-date').value;
-            const endTime = document.getElementById('end-time').value;
+            const reservationDate = document.getElementById('reservation-date').value;
+            const reservationTime = document.getElementById('reservation-time').value;
 
-            if (!startDate || !startTime || !endDate || !endTime) {
+            if (!reservationDate || !reservationTime) {
                 alert('Please fill out all date and time fields.');
                 return;
             }
 
             selectedSeats.forEach(seatNumber => {
-                localStorage.setItem(`reservation_${seatNumber}_startDate`, startDate);
-                localStorage.setItem(`reservation_${seatNumber}_startTime`, startTime);
-                localStorage.setItem(`reservation_${seatNumber}_endDate`, endDate);
-                localStorage.setItem(`reservation_${seatNumber}_endTime`, endTime);
+                localStorage.setItem(`reservation_${seatNumber}_date`, reservationDate);
+                localStorage.setItem(`reservation_${seatNumber}_time`, reservationTime);
             });
 
-            alert(`You have successfully reserved seats: ${selectedSeats.join(', ')} from ${startDate} ${startTime} to ${endDate} ${endTime}`);
+            alert(`You have successfully reserved seats: ${selectedSeats.join(', ')} on ${reservationDate} at ${reservationTime}`);
 
             // Optionally, reset the selected seats and disable the reserve button
             selectedSeats.forEach(seatNumber => {
