--- a/view_available_page.html
+++ b/view_available_page.html
@@ -50,7 +50,7 @@
         <nav class="profile-page-navbar">
             <a href="index.html">HOME</a>
             <a href="see_reservation_page.html">SEE RESERVATION</a>
-            <a href="index.html?scrollToContent=true">RESERVE A SEAT</a>
+            <a href="index.html#main-page-content">RESERVE A SEAT</a>
             <a href="profile_page.html">PROFILE</a>
             <a href="remove_reservation.html">RESERVATION DASHBOARD</a>
             <span class="profile-page-registerlogin"><a href="login_page.html">REGISTER/LOGIN</a></span>
