One date 30 min interval done

--- a/profile_current_reservation_page.html
+++ b/profile_current_reservation_page.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="reservation-details">
                     <div class="reservation-details-right">
-                        <h2>May 26, 2024  - May 30, 2024</h2>
+                        <h2>May 29, 2024 3:00 PM - 3:30 PM</h2>
                     </div>
                 </div>
                 <div class="reservation-details-arena">
@@ -93,7 +93,7 @@
                 </div>
                 <div class="reservation-details">
                     <div class="reservation-details-right">
-                        <h2>May 26, 2024  - May 30, 2024</h2>
+                        <h2>May 30, 2024 4:00 PM - 4:30 PM</h2>
                     </div>
                 </div>
                 <div class="reservation-details-arena">
@@ -114,7 +114,7 @@
                 </div>
                 <div class="reservation-details">
                     <div class="reservation-details-right">
-                        <h2>May 26, 2024  - May 30, 2024</h2>
+                        <h2>May 1, 2024 7:00 PM - 7:30 PM</h2>
                     </div>
                 </div>
                 <div class="reservation-details-arena">
@@ -135,7 +135,7 @@
                 </div>
                 <div class="reservation-details">
                     <div class="reservation-details-right">
-                        <h2>May 26, 2024  - May 30, 2024</h2>
+                        <h2>May 2, 2024 1:00 PM - 1:30 PM</h2>
                     </div>
                 </div>
                 <div class="reservation-details-arena">
