--- a/modify_reservation_page.html
+++ b/modify_reservation_page.html
@@ -41,6 +41,35 @@
                     <i class="fas fa-calendar-alt calendar-icon" onclick="document.getElementById('reservation-date').focus();"></i>
                 </div>
                 <div class="dropdown-container">
+                    <label for="Time">Time:</label>
+                    <select id="reservation-time" name="reservation-time">
+                        <option value="12:00 AM">12:00 AM - 12:30 AM</option>
+                        <option value="12:30 AM">12:30 AM - 1:00 AM</option>
+                        <option value="1:00 AM">1:00 AM - 1:30 AM</option>
+                        <option value="1:30 AM">1:30 AM - 2:00 AM</option>
+                        <option value="2:00 AM">2:00 AM - 2:30 AM</option>
+                        <option value="2:30 AM">2:30 AM - 3:00 AM</option>
+                        <option value="3:00 AM">3:00 AM - 3:30 AM</option>
+                        <option value="3:30 AM">3:30 AM - 4:00 AM</option>
+                        <option value="4:00 AM">4:00 AM - 4:30 AM</option>
+                        <option value="4:30 AM">4:30 AM - 5:00 AM</option>
+                        <option value="5:00 AM">5:00 AM - 5:30 AM</option>
+                        <option value="5:30 AM">5:30 AM - 6:00 AM</option>
+                        <option value="6:00 AM">6:00 AM - 6:30 AM</option>
+                        <option value="6:30 AM">6:30 AM - 7:00 AM</option>
+                        <option value="7:00 AM">7:00 AM - 7:30 AM</option>
+                        <option value="7:30 AM">7:30 AM - 8:00 AM</option>
+                        <option value="8:00 AM">8:00 AM - 8:30 AM</option>
+                        <option value="8:30 AM">8:30 AM - 9:00 AM</option>
+                        <option value="9:00 AM">9:00 AM - 9:30 AM</option>
+                        <option value="9:30 AM">9:30 AM - 10:00 AM</option>
+                        <option value="10:00 AM">10:00 AM - 10:30 AM</option>
+                        <option value="10:30 AM">10:30 AM - 11:00 AM</option>
+                        <option value="11:00 AM">11:00 AM - 11:30 AM</option>
+                        <option value="11:30 AM">11:30 AM - 12:00 PM</option>
+                    </select>
+                </div>
+                <div class="dropdown-container">
                     <label for="arena">Arena:</label>
                     <select id="arena" name="arena">
                         <option value="crypto">Crypto.com</option>
